// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CardGrid should match snapshot - custom config 1`] = `
<div
  class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 custom"
>
  <div>
    Item
  </div>
</div>
`;

exports[`CardGrid should match snapshot - default 1`] = `
<div
  class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-4 gap-4 "
>
  <div>
    Item 1
  </div>
  <div>
    Item 2
  </div>
</div>
`;
